--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 
     <body>
         <!-- NAVBAR -->
-        <nav class="navbar navbar-expand-lg navbar-light text-center">
+        <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                 
-                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                       <li class="nav-item active">
                         <a class="nav-link" href="#home">Home</a>
@@ -35,17 +35,15 @@
                 <div class="row align-items-md-stretch">
                     <div class="col-md-6">
                       <div class="h-100 p-5 bg-light rounded-3">
-                        <p>Olá, meu nome é Jéssica Thomaz tenho 27 anos. <br/>
-                            Graduada em Ciência da Computação e Pós-Graduada em Projetos de Aplicativos Móveis Multiplataforma.<br/>
-                            Esse portifólio foi criado para fins de estudos no Bootcamp <b>Inter Frontend Developer</b><br/>que é uma das maiores e mais completas plataformas digitais de serviços financeiros e não financeiros do Brasil.
+                        <p>Sou Jéssica Thomaz, tenho 27 anos, graduada em Ciência da Computação e Pós-Graduada em Projetos de Aplicativos Móveis Multiplataforma. <br/>
+                          Esse portifólio foi criado para fins educacionais e demonstrativos no <b>Bootcamp Inter Frontend Developer</b>, que consiste em uma das maiores e mais completas plataformas digitais de serviços financeiros e não financeiros do Brasil.
                         </p>
                       </div>
                     </div>
                     <div class="col-md-6">
                       <div class="h-100 p-5 bg-light rounded-3">
-                        <p>Aqui você pode encontrar as minhas conquistas, projetos, habilidades e mentorias. <br/>
-                            O site será atualizado de acordo com os conhecimento adquiridos no Bootcamp.<br/>
-                            Aproveite os estudos e me siga nas redes sociais.
+                        <p>
+                          Em minha página é possível encontrar conquistas, projetos desenvolvidos, habilidades e mentorias. O site está em constante atualização, de acordo com os conhecimento adquiridos no Bootcamp e em outras plataformas. Aproveite os estudos e me siga nas redes sociais.
                         </p>
                       </div>
                     </div>
@@ -56,25 +54,28 @@
         <!-- Conquistas -->
         <section id="conquistas">
             <div class="container-fluid home text-center margin">
-                <h3>Conquistas</h3>
+                <h3 class="conquista">Conquistas</h3>
                 <div class="row">
                     <!-- 1 -->
                     <div class="col-lg-4">
                       <img class="bd-placeholder-img" width="140" height="140" src="img/bootcamp-inter.png">
                       <h2>Boas-vindas ao Bootcamp Inter Frontend Developer</h2>
                       <p>Conhecimento do Inter, uma das plataformas de serviços financeiros e não financeiros mais completa do Brasil.</p>
+                      <p><a class="btn btn-primary" href="https://certificates.digitalinnovation.one/F4C96A07" target="_blank">Certificado »</a></p>
                     </div>
 
                     <div class="col-lg-4">
                       <img class="bd-placeholder-img" width="140" height="140" src="img/logica-programacao.png">
                       <h2>Lógica de Programação Essencial</h2>
                       <p>Lógica de programação é a forma como o desenvolvedor entende a comunicação a fim de programar uma função de um programa. Faz uso de algoritmos, que são sequências de passos bem estabelecidos, como por exemplo, uma receita de bolo.</p>                  
+                      <p><a class="btn btn-primary" href="https://certificates.digitalinnovation.one/49347105" target="_blank">Certificado »</a></p>
                     </div>
 
                     <div class="col-lg-4">
                       <img class="bd-placeholder-img" width="140" height="140" src="img/estrutura-dados.png">
                       <h2>Estrutura de Dados e Algoritmos</h2>
                       <p>O que são estruturas de dados em um sistema, qual a importância dela e como trabalhar com o armazenamento dessas informações de forma ágil e otimizada.</p>
+                      <p><a class="btn btn-primary" href="https://certificates.digitalinnovation.one/D62D57C3" target="_blank">Certificado »</a></p>
                     </div>
 
                     <!-- 2 -->
@@ -82,21 +83,30 @@
                       <img class="bd-placeholder-img" width="140" height="140" src="img/github.png">
                       <h2>Introdução ao Git e ao GitHub</h2>
                       <p>Um pouco da história do Git e como ele se tornou essencial para otimizar projetos dos desenvolvedores. Foi apresentado também seus principais comandos, como funciona a plataforma e como ela pode simplificar o trabalho.</p>
+                      <p><a class="btn btn-primary" href="https://certificates.digitalinnovation.one/95A9B91A" target="_blank">Certificado »</a></p>
                     </div>
 
                     <div class="col-lg-4">
                       <img class="bd-placeholder-img" width="140" height="140" src="img/scrum.png">
                       <h2>Projetos ágeis com SCRUM</h2>
                       <p>SCRUM é um framework utilizado no gerenciamento ágil de projetos de software. Esse curso apresentou os fundamentos e práticas da metodologia.</p>
+                      <p><a class="btn btn-primary" href="https://certificates.digitalinnovation.one/9D82D98D" target="_blank">Certificado »</a></p>
                     </div>
 
                     <div class="col-lg-4">
                       <img class="bd-placeholder-img" width="140" height="140" src="img/html-css.png">
                       <h2>Introdução a criação de websites com HTML5 e CSS3</h2>
                       <p>Nesse curso o especialista apresentou um pouco sobre a história do HTML5 e do CSS3, como funciona a estrutura básica dessas tecnologias, sua semântica, principais elementos e comandos.</p>
+                      <p><a class="btn btn-primary" href="https://certificates.digitalinnovation.one/B877906A" target="_blank">Certificado »</a></p>
                     </div>
 
                     <!-- 3 -->
+                    <div class="col-lg-4">
+                      <img class="bd-placeholder-img" width="140" height="140" src="img/html-css.png">
+                      <h2>Construindo páginas para internet com Bootstrap</h2>
+                      <p>Utilizando o framework Bootstrap e mais sobre HTML5 e CSS3.</p>
+                      <p><a class="btn btn-primary" href="https://certificates.digitalinnovation.one/5FC42D08" target="_blank">Certificado »</a></p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -104,6 +114,22 @@
         <!-- Rodapé -->
         <footer class="container-fluid text-center bg-footer margin">
             <p>Desenvolvido por Jéssica Thomaz 🎈</p>
+            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+              <a href="https://github.com/jessicathomaz1" target="_blank">
+                <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+              </a>
+            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+              <a href="https://www.linkedin.com/in/jessicathomaz1/" target="_blank">
+                <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
+              </a>
+            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
+              <a href="https://www.instagram.com/jessicathomaz1/" target="_blank">
+                <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"/>
+              </a>
+            </svg>
+          
         </footer>
 
 
