--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
-        <title>Bootstrap</title>
+        <title>Bootcamp Inter</title>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="icon" type="imagem/png" href="img/logo-bootstrap.png" />
     </head>
 
     <body>
