--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <div class="col-md-6">
                       <div class="h-100 p-5 bg-light rounded-3">
                         <p>Sou Jéssica Thomaz, tenho 27 anos, graduada em Ciência da Computação e Pós-Graduada em Projetos de Aplicativos Móveis Multiplataforma. <br/>
-                          Esse portifólio foi criado para fins educacionais e demonstrativos no <b>Bootcamp Inter Frontend Developer</b>, que consiste em uma das maiores e mais completas plataformas digitais de serviços financeiros e não financeiros do Brasil.
+                          Esse portfólio foi criado para fins educacionais e demonstrativos no <b>Bootcamp Inter Frontend Developer</b>, que consiste em uma das maiores e mais completas plataformas digitais de serviços financeiros e não financeiros do Brasil.
                         </p>
                       </div>
                     </div>
