--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                       <li class="nav-item active">
                         <a class="nav-link" href="#conquistas">Conquistas</a>
                       </li>
+                      <li class="nav-item active">
+                        <a class="nav-link" href="#projetos">Projetos</a>
+                      </li>
                   </div>
             </div>
         </nav>
@@ -108,8 +111,44 @@
                       <p>Utilizando o framework Bootstrap e mais sobre HTML5 e CSS3.</p>
                       <p><a class="btn btn-primary" href="https://certificates.digitalinnovation.one/5FC42D08" target="_blank">Certificado »</a></p>
                     </div>
+
+                    <div class="col-lg-4">
+                      <img class="bd-placeholder-img" width="140" height="140" src="img/javascript.png">
+                      <h2>Introdução ao JavaScript</h2>
+                      <p>O que é o Javascript, as necessidades que esta linguagem atende e as diversas possibilidades dentro do mercado de trabalho.</p>
+                      <p><a class="btn btn-primary" href="https://hermes.digitalinnovation.one/certificates/9CC76A42.pdf" target="_blank">Certificado »</a></p>
+                    </div>
                 </div>
             </div>
+        </section>
+
+        <section id="projetos">
+          <div class="container-fluid home text-center margin">
+            <h3 class="text-center">Projetos</h3>
+            <div class="row">
+              <!-- Contador -->
+              <div class="col-lg-6">
+                <img class="bd-placeholder-img" width="400" height="400" src="img/projetos/contador.PNG">
+                <p>Primeiro projeto para o curso de Introdução ao Javascript</p>
+                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                  <a href="https://github.com/jessicathomaz1/contador" target="_blank">
+                    <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+                  </a>
+                </svg>
+              </div>
+
+              <!-- Todo List -->
+              <div class="col-lg-6">
+                <img class="bd-placeholder-img" width="400" height="400" src="img/projetos/todo-list.PNG">
+                <p>Desafio do curso de Introdução ao Javascript</p>
+                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                  <a href="https://github.com/jessicathomaz1/todo-list" target="_blank">
+                    <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+                  </a>
+                </svg>
+              </div>
+            </div>
+          </div>
         </section>
 
         <!-- Rodapé -->
